--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>4.6.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
