--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/capstonedb
 spring.datasource.username=postgres
 spring.datasource.password=5781Cpxks
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
