--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/capstonedb
 spring.datasource.username=postgres
 spring.datasource.password=5781Cpxks
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
 #server.error.include-stacktrace = always
 #server.error.include-exception = true
 #server.error.include-message = always
