--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.username=postgres
 spring.datasource.password=5781Cpxks
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=
-#server.error.include-stacktrace = always
-#server.error.include-exception = true
-#server.error.include-message = always
-#logging.level.org.hibernate.SQL=DEBUG
+server.error.include-stacktrace = always
+server.error.include-exception = true
+server.error.include-message = always
+logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
