--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/capstonedb
 spring.datasource.username=postgres
-spring.datasource.password=5781Cpxks
+spring.datasource.password=Passw@rd
 #logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=
 #server.error.include-stacktrace = always
