--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/capstonedb
 spring.datasource.username=postgres
 spring.datasource.password=PasswOrd
+server.error.whitelabel.enabled=false
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 server.error.include-stacktrace = always
 server.error.include-exception = true
-server.error.include-message = always
+#server.error.include-message = always
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
 #spring.jpa.show-sql=true
