--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ server.error.include-exception = true
 #server.error.include-message = always
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 server.port=8081
